# Workspace_Data_Science

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  REQUIREMENTS.md  WHITEPAPER.md  novo-projeto.ps1  pyproject.toml  requirements.txt
projetos/.template/: pyproject.toml
projetos/.template/notebooks/: 01_exploracao.ipynb
