[project]
name = "workspace-data-science"
version = "0.1.0"
description = "Workspace Data Science — análise de dados, visualização e Machine Learning"
requires-python = ">=3.12"

dependencies = [
  # Ambiente interativo
  "jupyterlab>=4.4",
  "notebook>=7.4",
  "ipykernel>=6.30",

  # Manipulação de dados
  "numpy>=2.3",
  "pandas>=2.3",
  "polars>=1.30",
  "pyarrow>=20.0",
  "openpyxl>=3.1",
  "duckdb>=1.3",

  # Visualização
  "matplotlib>=3.10",
  "plotly>=6.1",
  "seaborn>=0.13",

  # Machine Learning
  "scikit-learn>=1.7",
  "xgboost>=3.0",
  "lightgbm>=4.6",

  # Estatística
  "scipy>=1.15",
  "statsmodels>=0.14",

  # Testes
  "pytest>=8.4",
  "pytest-cov>=6.2",

  # Utilitários
  "python-dotenv>=1.1",
  "rich>=14.0",
  "typer>=0.16",
  "httpx>=0.28",
  "pydantic>=2.11",
]

[tool.uv.workspace]
members = ["projetos/*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "__pycache__", "*.ipynb"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# BasedPyright
# ---------------------------------------------------------------------------
[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["projetos"]
exclude = [".venv", "**/__pycache__", "**/*.ipynb"]
venvPath = "."
venv = ".venv"

# ---------------------------------------------------------------------------
# Pytest (raiz — cada projeto pode sobrescrever)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
